[tool.poetry]
name = "cyberpunk"
version = "0.1.0"
description = "Audio Processing Server"
authors = ["Johannes Naylor <jonaylor89@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pydub = "^0.25.1"
Flask = "^2.0.2"
python-dotenv = "^0.19.2"
boto3 = "^1.20.54"
gunicorn = "^20.1.0"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
