[tool.poetry]
name = "cyberpunk"
version = "0.2.7"
description = "Audio Processing Server"
authors = ["Johannes Naylor <jonaylor89@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/jonaylor89/cyberpunk"
repository = "https://github.com/jonaylor89/cyberpunk"
keywords = ["audio", "sound", "server"]

[tool.poetry.scripts]
cyberpunk = 'main:main'

[tool.poetry.dependencies]
python = "^3.9"
pydub = "^0.25.1"
Flask = "^2.0.2"
python-dotenv = "^0.19.2"
boto3 = "^1.20.54"
gunicorn = "^20.1.0"
requests = "^2.27.1"
PyYAML = "^6.0"
click = "^8.0.3"
# musicnn = { git = "https://github.com/jordipons/musicnn.git", branch = "master" }
opentelemetry-instrumentation-flask = "^0.29b0"
opentelemetry-instrumentation-requests = "^0.29b0"
opentelemetry-api = "^1.10.0"
opentelemetry-sdk = "^1.10.0"
opentelemetry-exporter-jaeger = "^1.10.0"
opentelemetry-exporter-gcp-trace = "^1.1.0"
google-cloud-storage = "^2.2.1"
google-auth = "^2.6.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.931"
types-requests = "^2.27.9"
pydub-stubs = "^0.25.1"
boto3-stubs = "^1.20.54"
types-PyYAML = "^6.0.4"
flake8 = "^4.0.1"
pre-commit = "^2.17.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79

[tool.pycln]
all = true

[tool.isort]
line_length = 79
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
